[package]
name = "rust-stm32f051"
version = "0.1.0"
authors = ["Luz"]
description = "Blinking example for STM32F0 Discovery Board written in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Luz/rust-stm32f051"
edition = "2018"

[dependencies]
cortex-m-rt = "0.7.1"
cortex-m = "0.7.4"
stm32f0xx-hal = {version = "0.18", features = ["rt", "stm32f051"]}

panic-halt = "0.2.0"
nb = "1.0.0"

